Fixed css align error

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ nav.menu {
   background: black;
   color: white;
   display: flex;
-  align-items: left;
   justify-content: space-around;
   flex-direction: row;
 }
